<resources>
    <string name="app_name">Parking Control</string>

    <string name="tvBienvenido">Bienvenido a Parking System</string>
    <string name="tvInicia">Inicia sesión para empezar</string>
    <string name="txtUser">Nombre de usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="btnIniciarSesion">INICIAR SESIÓN</string>
    <string name="linkRegistrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="contrasenia2">Repetir contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="parqueos">Parqueos</string>
    <string name="cuenta">Mi cuenta</string>
    <string name="tituloUsuario">Usuario</string>
    <string name="subtituloCorreo">tamara@docente.com</string>
    <string name="registro">Registro parqueos</string>
    <string name="nroMatricula">Nro. Matricula</string>
    <string name="tiempo">Tiempo</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrar">Registrar</string>


    <!--ACA SON LOS STRING QUE AGREGO AUTOMATICAMENTE EL DRAWER, F-->
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Parking Control</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="tvcerrarSesion">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>