<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogo">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="248dp"
        android:layout_height="176dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/registro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtMatricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nroMatricula"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="98dp" />

        <EditText
            android:id="@+id/txtTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tiempo"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:digits="0123456789"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="178dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancelar"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/registrar"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>